--- a/assets/v2/neon/neon-renderer.scss
+++ b/assets/v2/neon/neon-renderer.scss
@@ -20,6 +20,7 @@ $css-vars-use-native: true !default;
 @import "css-vars";
 @import "neon-structure";
 @import "neon-effects";
+@import "neon-decorations";
 @import "neon-tables.css";
 @import "neon-theme-selector";
 @import "neon-footer";
