--- a/assets/v2/neon/neon-renderer.scss
+++ b/assets/v2/neon/neon-renderer.scss
@@ -23,6 +23,7 @@ $css-vars-use-native: true !default;
 @import "neon-decorations";
 @import "neon-tables.css";
 @import "neon-theme-selector";
+@import "neon-theme-visibility";
 @import "neon-footer";
 
 
