--- a/assets/v2/structure/flex-incl.scss
+++ b/assets/v2/structure/flex-incl.scss
@@ -6,34 +6,36 @@
 
 
 
+// scss-lint:disable VendorPrefix
+
 @mixin display-flex($inline: false, $require-old-syntaxes: true) {
 
     @if ($inline) {
         @if ($require-old-syntaxes) {
-            display: -webkit-inline-box !important;
-            display: -moz-inline-box !important;
-            display: -ms-inline-flexbox !important;
-            display: -webkit-inline-flex !important;
+            display: -webkit-inline-box;
+            display: -moz-inline-box;
+            display: -ms-inline-flexbox;
+            display: -webkit-inline-flex;
         }
-        display: inline-flex !important;
+        display: inline-flex;
     }
     @else {
         @if ($require-old-syntaxes) {
-            display: -webkit-box !important;
-            display: -moz-box !important;
-            display: -ms-flexbox !important;
-            display: -webkit-flex !important;
+            display: -webkit-box;
+            display: -moz-box;
+            display: -ms-flexbox;
+            display: -webkit-flex;
         }
-        display: flex !important;
+        display: flex;
     }
 }
 
 
 @mixin _flex-init-children() {
-    & > * {
-        order: 0;
+    > * {
         flex: 0 1 auto;
         align-self: auto;
+        order: 0;
     }
 }
 
@@ -107,7 +109,7 @@
 
 
 @mixin flex-justify-stretch($require-old-syntaxes: true) {
-    & > * {
+    > * {
         flex: 1 0 auto;
     }
 }
@@ -251,19 +253,21 @@
 
 
 .flex-column {
+    @include flex-column($init-children: false);
+
     &.flex-reverse {
         @include flex-reverse-column($init-children: false);
     }
-    @include flex-column($init-children: false);
 }
 
 
 .flex-row,
 .grid-adaptive {
+    @include flex-row($init-children: false);
+
     &.flex-reverse {
         @include flex-reverse-row($init-children: false);
     }
-    @include flex-row($init-children: false);
 }
 
 
