--- a/assets/v2/neon/neon-decorations.scss
+++ b/assets/v2/neon/neon-decorations.scss
@@ -8,21 +8,21 @@ $css-vars-use-native: true;
 
 
 
-@include css-vars((
-    --kbd-background: var(--theme-background-color-at-level-raised),
+:root {
+    --kbd-background: var(--theme-background-color-at-level-raised);
 
-    --kbd-highlight-box-shadow: inset 0.1ex 0.2ex hsla(0, 0%, 100%, 10%),
-    --kbd-shade-box-shadow: inset -0.1ex -0.2ex hsla(0, 0%, 0%, 10%),
-    --kbd-external-shadow: var(--box-shadow-z1),
-));
+    --kbd-highlight-box-shadow: inset 0.1ex 0.2ex hsla(0, 0%, 100%, 0.10);
+    --kbd-shade-box-shadow: inset -0.1ex -0.2ex hsla(0, 0%, 0%, 0.10);
+    --kbd-external-shadow: var(--box-shadow-z1);
+}
 
 
 
 kbd {
-    background: var(--kbd-background);
     padding: 0.5ex 1ex;
+    border-radius: 0.5ex;
+    background: var(--kbd-background);
+    box-shadow: var(--kbd-highlight-box-shadow), var(--kbd-shade-box-shadow), var(--kbd-external-shadow);
     font-family: inherit;
     font-size: 80%;
-    border-radius: 0.5ex;
-    box-shadow: var(--kbd-highlight-box-shadow), var(--kbd-shade-box-shadow), var(--kbd-external-shadow);
 }
