--- a/assets/v2/neon/neon-theme-selector.scss
+++ b/assets/v2/neon/neon-theme-selector.scss
@@ -23,7 +23,7 @@
 
 $color-swatch-border-color-warning: #ff0;
 $color-swatch-fill-color-warning: #f00;
-$color-swatch-hover-normal-ring-color: hsla(200, 18%, 46%, 25%);
+$color-swatch-hover-normal-ring-color: hsla(200, 18%, 46%, 0.25);
 $color-swatch-hover-focus-ring-color: hsl(200, 18%, 46%);
 
 
