Better selection for `reduce-motion`

--- a/assets/v2/neon/neon-animation-renderer.scss
+++ b/assets/v2/neon/neon-animation-renderer.scss
@@ -30,9 +30,12 @@ html {
 
 
 .reduce-motion {
-    &, & * {
-        animation-name: none !important;
-        transition-property: none !important;
+    &,
+    & *,
+    & *::before,
+    & *::after {
+        transition-property: none !important; // scss-lint:disable ImportantRule
+        animation-name: none !important;      // scss-lint:disable ImportantRule
     }
 }
 
