Added styles for figure cards
* This is basically the same as the portfolio cards at https://Resume.BenLeggiero.me/Portfolio
* Also, introduced a pattern of sub-folders inside the Neon theme folder

--- a/assets/v2/neon/neon-renderer.scss
+++ b/assets/v2/neon/neon-renderer.scss
@@ -22,6 +22,7 @@ $css-vars-use-native: true !default;
 @import "neon-effects";
 @import "neon-decorations";
 @import "neon-tables.css";
+@import "neon-figure-cards";
 @import "neon-theme-selector";
 @import "neon-theme-visibility";
 @import "neon-footer";
