Some support for BenLeggiero.me feature #10: Portal page
* Automatically aligned the thumbnail of a figure card with its border radius so there's a consistent thickness throughout the curve
* Made cards never expand wider than the page's layout allows

--- a/assets/v2/material/material-buttons-vars.scss
+++ b/assets/v2/material/material-buttons-vars.scss
@@ -64,6 +64,7 @@ $chip-button-group-selector: ".chips, .pills";
 
 @include css-vars((
     --button-border-color: transparent,
+    --button-border-width: 1px,
     --button-background: var(--theme-primary-color),
     --button-text-color: var(--theme-text-on-primary-color-color),
 
