Many improvements I made for Recipes.BenLeggiero.me

--- a/assets/v2/material/material-app-bar.scss
+++ b/assets/v2/material/material-app-bar.scss
@@ -39,4 +39,9 @@
             line-height: 1;
         }
     }
+
+    .title-text {
+        display: inline-block;
+        text-align: center;
+    }
 }
