--- a/assets/v2/neon/neon-renderer.scss
+++ b/assets/v2/neon/neon-renderer.scss
@@ -20,9 +20,11 @@ $css-vars-use-native: true !default;
 @import "css-vars";
 @import "neon-structure";
 @import "neon-effects";
+@import "neon-icons";
 @import "neon-decorations";
 @import "neon-tables.css";
 @import "neon-figure-cards";
+@import "neon-sidebar";
 @import "neon-theme-selector";
 @import "neon-theme-visibility";
 @import "neon-footer";
