--- a/assets/v2/material/material-chips.scss
+++ b/assets/v2/material/material-chips.scss
@@ -14,21 +14,22 @@
 }
 
 
-#{$chip-selector} {
+#{$chip-button-group-selector} {
+    #{$chip-selector} {
+        display: inline-block;
+        margin: 0.5ex 1ex;
+        padding: 0.75ex 1.5ex;
+        border-radius: 99in;
+        background: var(--chip-background);
 
-    display: inline-block;
-    margin: 0.5ex 1ex;
-    padding: 0.75ex 1.5ex;
-    border-radius: 99in;
-    background: var(--chip-background);
-
-    user-select: none;
+        user-select: none;
 
 
-    &,
-    &:link,
-    &:visited {
-        color: var(--theme-foreground-color);
+        &,
+        &:link,
+        &:visited {
+            color: var(--theme-foreground-color);
+        }
     }
 }
 
