Forgot to add import

--- a/assets/v2/neon/neon-renderer.scss
+++ b/assets/v2/neon/neon-renderer.scss
@@ -12,7 +12,10 @@ $css-vars-use-native: true !default;
 
 @import url('https://use.fontawesome.com/releases/v5.7.2/css/all.css');
 @import "neon-animation-vars";
+
 @import "../basics/reset.css";
+@import "JSlessness";
+
 @import "neon-animation-renderer";
 @import "neon-brightness";
 @import "neon-typography-vars";
