Better `<cite>` styling and help-tooltip element styles

--- a/assets/v2/neon/neon-decorations.scss
+++ b/assets/v2/neon/neon-decorations.scss
@@ -29,12 +29,24 @@ kbd {
 
 
 
-blockquote>cite {
-    display: block;
-    margin-block-start: 1em;
-    text-align: end;
+cite,
+.help {
+    &[title]:not([title=""]):not(.plain) {
+        cursor: help;
+        text-decoration: dotted underline;
+    }
+}
 
-    &::before {
-        content: " — ";
+
+
+cite {
+    blockquote>& {
+        display: block;
+        margin-block-start: 1em;
+        text-align: end;
+
+        &::before {
+            content: " — ";
+        }
     }
 }
