I feel so silly for leaving a localhost in there...

--- a/assets/v2/neon/neon-tables-incl.scss
+++ b/assets/v2/neon/neon-tables-incl.scss
@@ -19,7 +19,7 @@ $css-vars-use-native: true;
     --table-header-cell-background: rgba(127, 127, 127, 0.2);
     --table-cell-span-indicator-color: rgba(0, 0, 0, 0.1);
     --table-cell-span-background-color: rgba(0, 0, 0, 0.05);
-    --table-cell-span-background-image: url(http://localhost:4001/assets/v2/supplemental%20images/Small%20Polka%20Dots%2021x18.svg);
+    --table-cell-span-background-image: url(https://stylesheets.bhstudios.org/assets/v2/supplemental%20images/Small%20Polka%20Dots%2021x18.svg);
 
     @at-root
     .brightness-dark,
