When the sidebar is full-height and shown, app bar should pop in front of it
This allows the sidebar to be dismissed with the sidebar button

--- a/assets/v2/material/material-sidebar-renderer.scss
+++ b/assets/v2/material/material-sidebar-renderer.scss
@@ -118,8 +118,13 @@
 
             @at-root
             #{$sidebar-parent-sidebar-shown-selector} {
-                &.full-height-sidebar .app-bar * {
-                    --button-text-color: var(--theme-foreground-color) !important;
+                &.full-height-sidebar .app-bar {
+
+                    z-index: calc(var(--sidebar-z-index) + 1);
+
+                    * {
+                        --button-text-color: var(--theme-foreground-color) !important;
+                    }
                 }
             }
         }
