Fixed a bug where sidebar scrim appeared over app bar when not full height

--- a/assets/v2/material/material-sidebar-renderer.scss
+++ b/assets/v2/material/material-sidebar-renderer.scss
@@ -128,6 +128,10 @@
                 }
             }
         }
+
+        .sidebar-scrim {
+            z-index: var(--sidebar-z-index);
+        }
     }
 }
 
@@ -135,7 +139,7 @@
 
 .sidebar-scrim {
     position: fixed;
-    z-index: var(--sidebar-z-index);
+    z-index: var(--app-bar-z-index);
     width: 100vw;
     height: 100vh;
 
