Fixed some documentation

--- a/assets/v2/material/material-app-bar.scss
+++ b/assets/v2/material/material-app-bar.scss
@@ -2,7 +2,7 @@
 // material-app-bar
 //
 // Renders the Material app bar
-// See also: https://material.io/design/components/app-bar.html
+// See also: https://material.io/components/app-bars-top
 
 
 
