--- a/assets/v2/material/material-buttons.scss
+++ b/assets/v2/material/material-buttons.scss
@@ -2,7 +2,7 @@
 // material-buttons
 //
 // Renders Material buttons
-// See also: https://material.io/design/components/buttons.html
+// See also: https://material.io/components/buttons
 
 
 
