--- a/assets/v2/material/material-cards.scss
+++ b/assets/v2/material/material-cards.scss
@@ -2,7 +2,7 @@
 // material-cards
 //
 // Renders Material cards
-// See also: https://material.io/design/components/cards.html
+// See also: https://material.io/components/cards
 
 
 @import "css-vars";
