--- a/assets/v2/material/material-chips.scss
+++ b/assets/v2/material/material-chips.scss
@@ -2,7 +2,7 @@
 // material-chips
 //
 // Renders Material chips
-// See also: https://material.io/design/components/chips.html
+// See also: https://material.io/components/chips
 
 
 
