--- a/assets/v2/material/material-shadows.scss
+++ b/assets/v2/material/material-shadows.scss
@@ -5,6 +5,10 @@
  * Material Shadows
  *
  * A few classes for applying shadows which follow Material Design specs
+ *
+ * See also:
+ * - https://material.io/archive/guidelines/material-design/elevation-shadows.html
+ * - https://material.io/archive/guidelines/resources/shadows.html
  */
 
  @import 'material-shadows-vars';
