Applies icon spacing to all material icons

--- a/assets/v2/general/icons-import.scss
+++ b/assets/v2/general/icons-import.scss
@@ -1,2 +1,2 @@
 
-$icon-selector: ".material-icons, .fa, .fab, .fas";
+$icon-selector: ".material-icons, .material-icons-outlined, .material-icons-round, .material-icons-sharp, .material-icons-two-tone, .fa, .fab, .fas";
