Somehow I thought white on cyan looked good? 🙃

--- a/assets/v2/neon/neon-all-themes-vars.scss
+++ b/assets/v2/neon/neon-all-themes-vars.scss
@@ -79,7 +79,7 @@ $css-vars-at-root: true;
     --theme-fire-primary-color: #ff6e40,
     --theme-fire-accent-color: #2196f3,
     --theme-fire-text-on-primary-color-color: #fff,
-    --theme-fire-text-on-accent-color-color: #fff,
+    --theme-fire-text-on-accent-color-color: #000,
 ));
 
 $css-vars-at-root: false;
