--- a/assets/v2/neon/neon-all-themes-vars.scss
+++ b/assets/v2/neon/neon-all-themes-vars.scss
@@ -5,113 +5,87 @@
 // scss-lint:disable MergeableSelector
 
 
-@import "css-vars";
-$css-vars-use-native: true;
-
 
 
 /* Brightness Light */
 
-$css-vars-at-root: true;
-
-@include css-vars((
-    --light-theme-background-color-at-level-1: hsl(0, 0%, 98%),
-    --light-theme-background-color-at-level-2: hsl(0, 0%, 93%),
-    --light-theme-background-color-at-level-3: hsl(0, 0%, 86%),
-));
+:root {
+    --light-theme-background-color-at-level-1: hsl(0, 0%, 98%);
+    --light-theme-background-color-at-level-2: hsl(0, 0%, 93%);
+    --light-theme-background-color-at-level-3: hsl(0, 0%, 86%);
+}
 
 
 
 /* Brightness Dark */
 
-$css-vars-at-root: true;
-
-@include css-vars((
-    --dark-theme-background-color-at-level-1: hsl(200, 19.1%, 18%),
-    --dark-theme-background-color-at-level-2: hsl(200, 22.1%, 15%),
-    --dark-theme-background-color-at-level-3: hsl(200, 25.1%, 12%),
-));
+:root {
+    --dark-theme-background-color-at-level-1: hsl(200, 19.1%, 18%);
+    --dark-theme-background-color-at-level-2: hsl(200, 22.1%, 15%);
+    --dark-theme-background-color-at-level-3: hsl(200, 25.1%, 12%);
+}
 
 
 
 /* Neon Water */
 
-$css-vars-at-root: true;
-
-@include css-vars((
-    --theme-water-primary-color: #00b0ff,
-    --theme-water-accent-color: #009688,
-    --theme-water-text-on-primary-color-color: #fff,
-    --theme-water-text-on-accent-color-color: #000,
-));
-
-$css-vars-at-root: false;
+:root {
+    --theme-water-primary-color: #00b0ff;
+    --theme-water-accent-color: #009688;
+    --theme-water-text-on-primary-color-color: #fff;
+    --theme-water-text-on-accent-color-color: #000;
+}
 
 .brightness-dark,
 .brightness-black {
-
-    @include css-vars((
-        --theme-water-primary-color: #00b0ff,
-        --theme-water-accent-color: #fbc02d,
-        --theme-water-text-on-primary-color-color: #fff,
-        --theme-water-text-on-accent-color-color: #000,
-    ));
+    --theme-water-primary-color: #00b0ff;
+    --theme-water-accent-color: #fbc02d;
+    --theme-water-text-on-primary-color-color: #fff;
+    --theme-water-text-on-accent-color-color: #000;
 }
 
 
 
 /* Neon Earth */
 
-$css-vars-at-root: true;
-
-@include css-vars((
-    --theme-earth-primary-color: #4caf50,
-    --theme-earth-accent-color: #ff7043,
-));
+:root {
+    --theme-earth-primary-color: #4caf50;
+    --theme-earth-accent-color: #ff7043;
+}
 
 
 
 /* Neon Fire */
 
-$css-vars-at-root: true;
+:root {
+    --theme-fire-primary-color: #ff6e40;
+    --theme-fire-accent-color: #2196f3;
+    --theme-fire-text-on-primary-color-color: #fff;
+    --theme-fire-text-on-accent-color-color: #000;
+}
 
-@include css-vars((
-    --theme-fire-primary-color: #ff6e40,
-    --theme-fire-accent-color: #2196f3,
-    --theme-fire-text-on-primary-color-color: #fff,
-    --theme-fire-text-on-accent-color-color: #000,
-));
-
-$css-vars-at-root: false;
 
 .brightness-dark,
 .brightness-black {
-    @include css-vars((
-        --theme-fire-accent-color: #00e5ff,
-    ));
+    --theme-fire-accent-color: #00e5ff;
 }
 
 
 
 /* Neon Air */
 
-$css-vars-at-root: true;
+:root {
+    --theme-air-primary-color: #0d47a1;
+    --theme-air-accent-color: #0091ea;
+    --theme-air-text-on-primary-color-color: hsl(37, 100%, 96%);
+    --theme-air-text-on-accent-color-color: hsl(205, 87%, 97%);
+}
 
-@include css-vars((
-    --theme-air-primary-color: #0d47a1,
-    --theme-air-accent-color: #0091ea,
-    --theme-air-text-on-primary-color-color: hsl(37, 100%, 96%),
-    --theme-air-text-on-accent-color-color: hsl(205, 87%, 97%),
-));
-
-$css-vars-at-root: false;
 
 .brightness-dark,
 .brightness-black {
-    @include css-vars((
-        --theme-air-primary-color: #bbdefb,
-        --theme-air-accent-color: #ffe082,
-        --theme-air-text-on-primary-color-color: #263238,
-        --theme-air-text-on-accent-color-color: #000,
-    ));
+    --theme-air-primary-color: #bbdefb;
+    --theme-air-accent-color: #ffe082;
+    --theme-air-text-on-primary-color-color: #263238;
+    --theme-air-text-on-accent-color-color: #000;
 }
